--- a/css/navigation.css
+++ b/css/navigation.css
@@ -170,7 +170,7 @@ body {
   padding-top: 20px;
 }
 .dropinfo > ul > li > a {
-  text-transform: capitalize;
+  text-transform: unset;
   font-size: 14px;
 }
 .dropinfo > ul > li:hover a {
