minor content upadates

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -150,9 +150,6 @@ section:hover .heading::after {
   font-weight: 400;
 }
 
-.studentData {
-}
-
 .gridStudents {
   display: grid;
   gap: 20px;
@@ -673,7 +670,16 @@ footer {
   text-transform: uppercase;
   animation: wave 3s infinite alternate;
   background-size: 250%;
+  position: relative;
   /* background-image: linear-gradient(150deg,var(--yellow),var(--green),var(--red),var(--black)); */
+}
+.pageHeading::after {
+  content: "";
+  background: url("../img/headingDecorator.png") center repeat;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
 
 .headersection::after {
